src/test/ui/error-codes/E0297.stderr
error[E0005]: refutable pattern in `for` loop binding: `None` not covered
  --> $DIR/E0297.rs:9:9
   |
LL |     for Some(x) in xs {}
   |         ^^^^^^^ pattern `None` not covered
   | 
  ::: $SRC_DIR/libcore/option.rs:LL:COL
   |
LL |     None,
   |     ---- not covered
   |
   = note: the matched value is of type `std::option::Option<i32>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
